force-app/main/default/objects/Device_Shipment__c/Device_Shipment__c.object-meta.xml
<CustomObject>
<description>Tracking of shipped patient devices and onboarding artifacts.</description>
<label>Device Shipment</label>
<nameField>
<displayFormat>{000000}</displayFormat>
<label>Device Shipment Name</label>
<type>AutoNumber</type>
</nameField>
<pluralLabel>Device Shipments</pluralLabel>
<sharingModel>ReadWrite</sharingModel>
</CustomObject>