force-app/main/default/objects/Device_Shipment__c/fields/Asset__c.field-meta.xml
<CustomField>
<fullName>Asset__c</fullName>
<label>Asset</label>
<type>Lookup</type>
<referenceTo>Asset</referenceTo>
</CustomField>