force-app/main/default/objects/Device_Shipment__c/fields/AWB__c.field-meta.xml
<CustomField>
    <fullName>AWB__c</fullName>
    <externalId>true</externalId>
    <label>Shipment fields</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>