force-app/main/default/objects/Device_Shipment__c/fields/Dispatched_At__c.field-meta.xml
<CustomField>
    <fullName>Dispatched_At__c</fullName>
    <label>Shipment fields</label>
    <type>DateTime</type>
</CustomField>