force-app/main/default/objects/Device_Shipment__c/fields/Enrollment__c.field-meta.xml
<CustomField>
    <fullName>Enrollment__c</fullName>
    <label>Shipment fields</label>
    <referenceTo>Enrollment__c</referenceTo>
    <relationshipLabel>Shipment fields Records</relationshipLabel>
    <relationshipName>DeviceShipmentEnrollment</relationshipName>
    <type>Lookup</type>
</CustomField>