force-app/main/default/objects/Device_Shipment__c/fields/Shipment_Status__c.field-meta.xml
<CustomField>
<fullName>Shipment_Status__c</fullName>
<label>Shipment Status</label>
<type>Picklist</type>
<required>true</required>
</CustomField>