force-app/main/default/objects/Device_Shipment__c/fields/Tracking_Number__c.field-meta.xml
<CustomField>
<fullName>Tracking_Number__c</fullName>
<label>Tracking Number</label>
<type>Text</type>
<length>255</length>
</CustomField>