force-app/main/default/objects/Device_Shipment__c/fields/Tracking_URL__c.field-meta.xml
<CustomField>
    <fullName>Tracking_URL__c</fullName>
    <label>Shipment fields</label>
    <type>Url</type>
</CustomField>